--- a/index.html
+++ b/index.html
@@ -520,7 +520,6 @@
             </div>
         </div>
     </div>
-
     <script>
         // Configuración de Google Sheets
         const GOOGLE_SHEETS_URL = 'https://script.google.com/macros/s/AKfycby_dNsK1Uci6sPwgZHIsBuDrsMj_kgFHrNhmfchE-64-0vbfV1YxgG7cUl1KVtGDm5aEw/exec';
@@ -617,6 +616,66 @@
                 name: "Licenciatura en Administración de Empresas",
                 description: "Lidera la transformación organizacional, implementando estrategias innovadoras que optimizan recursos y potencian el crecimiento sostenible.",
                 employability: "90%",
+                duration: "3 años",
+                companies: "5+ millones de empresas en México",
+                areas: "Finanzas, Marketing, Recursos Humanos, Operaciones",
+                jobs: ["Jefatura administrativa", "Coordinador de talento", "Consultor empresarial", "Analista financiero", "Gerente de ventas corporativas"],
+                routes: ["Turismo", "Liderazgo e innovación", "Gestión de ventas estratégicas", "Gestión de capital humano"]
+            },
+            mercadotecnia: {
+                name: "Licenciatura en Mercadotecnia",
+                description: "Conecta consumidores con productos o servicios, desarrollando estrategias creativas que impulsan el posicionamiento de marcas.",
+                employability: "88%",
+                duration: "3 años",
+                companies: "Empresas en constante necesidad de marketing digital",
+                areas: "Marketing Digital, Investigación de Mercado, Publicidad, Branding",
+                jobs: ["Coordinador de mercadotecnia", "Especialista en marketing digital", "Community manager", "Growth hacker", "Consultor de marketing digital"],
+                routes: ["Gestión de ventas estratégicas", "Inteligencia de mercados", "Estrategias de Mercadotecnia en Buscadores y Comercio Electrónico", "Estrategia Publicitaria"]
+            },
+            derecho: {
+                name: "Licenciatura en Derecho",
+                description: "Protege los derechos de las personas y organizaciones, utilizando estrategias legales innovadoras que garantizan justicia.",
+                employability: "95.4%",
+                duration: "3 años",
+                companies: "Ejercicio en áreas civil, penal y laboral",
+                areas: "Derecho Civil, Penal, Laboral, Corporativo",
+                jobs: ["Abogado litigante", "Fiscal", "Asesor jurídico", "Consultor en LegalTech", "Especialista en litigación oral"],
+                routes: ["Derechos Humanos", "Criminología", "Legal Tech", "Sistema Penal Acusatorio"]
+            },
+            educacion: {
+                name: "Licenciatura en Educación",
+                description: "Lidera iniciativas educativas y sociales, diseñando programas curriculares y realizando investigaciones para mejorar la calidad educativa.",
+                employability: "92%",
+                duration: "3 años",
+                companies: "Instituciones públicas, privadas y ONGs",
+                areas: "Docencia, Gestión Educativa, Investigación, Educación Especial",
+                jobs: ["Docente", "Coordinador académico", "Investigador educativo", "Especialista en educación digital", "Coach educativo"],
+                routes: ["Educación Formal", "Educación Especial", "Educación Digital", "Orientación vocacional y profesional"]
+            },
+            industrial: {
+                name: "Ingeniería Industrial",
+                description: "Transforma industrias mediante la optimización de procesos, utilizando herramientas innovadoras que incrementan la eficiencia.",
+                employability: "94%",
+                duration: "3 años",
+                companies: "Manufactura, logística y servicios",
+                areas: "Optimización de Procesos, Calidad, Gestión de Operaciones",
+                jobs: ["Ingeniero de procesos", "Ingeniero de calidad", "Supervisor de producción", "Consultor de gestión de operaciones"],
+                routes: ["Calidad Automotriz", "Gestión de Proyectos Green Belt", "Equipos de Alto Rendimiento", "Análisis de datos y digitalización"]
+            },
+            software: {
+                name: "Ingeniería en Desarrollo de Software",
+                description: "Impulsa el cambio tecnológico en las empresas, utilizando herramientas innovadoras que optimizan procesos y mejoran resultados.",
+                employability: "92%",
+                duration: "3 años",
+                companies: "Más de 150 millones de vacantes estimadas para 2025",
+                areas: "Desarrollo Web, Aplicaciones Móviles, Big Data, DevOps",
+                jobs: ["Desarrollador Frontend/Backend", "Ingeniero de datos", "Arquitecto de software", "Ingeniero DevOps", "Desarrollador de videojuegos"],
+                routes: ["Análisis de datos", "Diseño y programación de videojuegos", "Inteligencia artificial", "Metodología DevOps", "Ciberseguridad", "Procesamiento de datos a gran escala - Big Data"]
+            },
+            comercio: {
+                name: "Licenciatura en Comercio y Negocios Internacionales",
+                description: "Impulsa el crecimiento global de las empresas, desarrollando estrategias que optimizan operaciones y conectan mercados sin fronteras.",
+                employability: "94%",
                 duration: "3 años",
                 companies: "75% de empresas buscan profesionales en comercio internacional",
                 areas: "Importación/Exportación, Logística, Negocios Globales",
@@ -971,14 +1030,6 @@
                         
                         <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin: 20px 0;">
                             <div style="background: #f0f7f0; padding: 15px; border-radius: 10px; text-align: center; border: 1px solid #7CB342;">
-                                <div style="font-size: 1.3rem; font-weight: 700; color: #2E7D7B;">28</div>
-                                <div style="font-size: 0.9rem; color: #555;">Certificados incluidos</div>
-                            </div>
-                            <div style="background: #f0f7f0; padding: 15px; border-radius: 10px; text-align: center; border: 1px solid #7CB342;">
-                                <div style="font-size: 1.3rem; font-weight: 700; color: #2E7D7B;">1</div>
-                                <div style="font-size: 0.9rem; color: #555;">Estancia empresarial</div>
-                            </div>
-                            <div style="background: #f0f7f0; padding: 15px; border-radius: 10px; text-align: center; border: 1px solid #7CB342;">
                                 <div style="font-size: 1.3rem; font-weight: 700; color: #2E7D7B;">7</div>
                                 <div style="font-size: 0.9rem; color: #555;">Lengua extranjera</div>
                             </div>
@@ -1041,64 +1092,12 @@
         });
     </script>
 </body>
-</html>",
-                companies: "5+ millones de empresas en México",
-                areas: "Finanzas, Marketing, Recursos Humanos, Operaciones",
-                jobs: ["Jefatura administrativa", "Coordinador de talento", "Consultor empresarial", "Analista financiero", "Gerente de ventas corporativas"],
-                routes: ["Turismo", "Liderazgo e innovación", "Gestión de ventas estratégicas", "Gestión de capital humano"]
-            },
-            mercadotecnia: {
-                name: "Licenciatura en Mercadotecnia",
-                description: "Conecta consumidores con productos o servicios, desarrollando estrategias creativas que impulsan el posicionamiento de marcas.",
-                employability: "88%",
-                duration: "3 años",
-                companies: "Empresas en constante necesidad de marketing digital",
-                areas: "Marketing Digital, Investigación de Mercado, Publicidad, Branding",
-                jobs: ["Coordinador de mercadotecnia", "Especialista en marketing digital", "Community manager", "Growth hacker", "Consultor de marketing digital"],
-                routes: ["Gestión de ventas estratégicas", "Inteligencia de mercados", "Estrategias de Mercadotecnia en Buscadores y Comercio Electrónico", "Estrategia Publicitaria"]
-            },
-            derecho: {
-                name: "Licenciatura en Derecho",
-                description: "Protege los derechos de las personas y organizaciones, utilizando estrategias legales innovadoras que garantizan justicia.",
-                employability: "95.4%",
-                duration: "3 años",
-                companies: "Ejercicio en áreas civil, penal y laboral",
-                areas: "Derecho Civil, Penal, Laboral, Corporativo",
-                jobs: ["Abogado litigante", "Fiscal", "Asesor jurídico", "Consultor en LegalTech", "Especialista en litigación oral"],
-                routes: ["Derechos Humanos", "Criminología", "Legal Tech", "Sistema Penal Acusatorio"]
-            },
-            educacion: {
-                name: "Licenciatura en Educación",
-                description: "Lidera iniciativas educativas y sociales, diseñando programas curriculares y realizando investigaciones para mejorar la calidad educativa.",
-                employability: "92%",
-                duration: "3 años",
-                companies: "Instituciones públicas, privadas y ONGs",
-                areas: "Docencia, Gestión Educativa, Investigación, Educación Especial",
-                jobs: ["Docente", "Coordinador académico", "Investigador educativo", "Especialista en educación digital", "Coach educativo"],
-                routes: ["Educación Formal", "Educación Especial", "Educación Digital", "Orientación vocacional y profesional"]
-            },
-            industrial: {
-                name: "Ingeniería Industrial",
-                description: "Transforma industrias mediante la optimización de procesos, utilizando herramientas innovadoras que incrementan la eficiencia.",
-                employability: "94%",
-                duration: "3 años",
-                companies: "Manufactura, logística y servicios",
-                areas: "Optimización de Procesos, Calidad, Gestión de Operaciones",
-                jobs: ["Ingeniero de procesos", "Ingeniero de calidad", "Supervisor de producción", "Consultor de gestión de operaciones"],
-                routes: ["Calidad Automotriz", "Gestión de Proyectos Green Belt", "Equipos de Alto Rendimiento", "Análisis de datos y digitalización"]
-            },
-            software: {
-                name: "Ingeniería en Desarrollo de Software",
-                description: "Impulsa el cambio tecnológico en las empresas, utilizando herramientas innovadoras que optimizan procesos y mejoran resultados.",
-                employability: "92%",
-                duration: "3 años",
-                companies: "Más de 150 millones de vacantes estimadas para 2025",
-                areas: "Desarrollo Web, Aplicaciones Móviles, Big Data, DevOps",
-                jobs: ["Desarrollador Frontend/Backend", "Ingeniero de datos", "Arquitecto de software", "Ingeniero DevOps", "Desarrollador de videojuegos"],
-                routes: ["Análisis de datos", "Diseño y programación de videojuegos", "Inteligencia artificial", "Metodología DevOps", "Ciberseguridad", "Procesamiento de datos a gran escala - Big Data"]
-            },
-            comercio: {
-                name: "Licenciatura en Comercio y Negocios Internacionales",
-                description: "Impulsa el crecimiento global de las empresas, desarrollando estrategias que optimizan operaciones y conectan mercados sin fronteras.",
-                employability: "94%",
-                duration: "3 años
+</html>3rem; font-weight: 700; color: #2E7D7B;">28</div>
+                                <div style="font-size: 0.9rem; color: #555;">Certificados incluidos</div>
+                            </div>
+                            <div style="background: #f0f7f0; padding: 15px; border-radius: 10px; text-align: center; border: 1px solid #7CB342;">
+                                <div style="font-size: 1.3rem; font-weight: 700; color: #2E7D7B;">1</div>
+                                <div style="font-size: 0.9rem; color: #555;">Estancia empresarial</div>
+                            </div>
+                            <div style="background: #f0f7f0; padding: 15px; border-radius: 10px; text-align: center; border: 1px solid #7CB342;">
+                                <div style="font-size: 1.
