--- a/index.html
+++ b/index.html
@@ -520,6 +520,7 @@
             </div>
         </div>
     </div>
+
     <script>
         // Configuración de Google Sheets
         const GOOGLE_SHEETS_URL = 'https://script.google.com/macros/s/AKfycby_dNsK1Uci6sPwgZHIsBuDrsMj_kgFHrNhmfchE-64-0vbfV1YxgG7cUl1KVtGDm5aEw/exec';
@@ -770,7 +771,7 @@
                     email: userData.email,
                     promedio: userData.promedio,
                     empresa: userData.empresa,
-                    inversion: userData.inversion, // ✅ LÍNEA CORREGIDA - AHORA INCLUYE INVERSIÓN
+                    inversion: userData.inversion,
                     resultado: 'Pendiente',
                     tipo: 'Quiz Carreras',
                     respuestas: 'Iniciando quiz...'
@@ -966,7 +967,7 @@
                 email: userData.email,
                 promedio: userData.promedio,
                 empresa: userData.empresa,
-                inversion: userData.inversion, // ✅ PRESUPUESTO CORREGIDO
+                inversion: userData.inversion,
                 resultado: showSecondCareer ? 
                     `Principal: ${careers[winningCareer].name} | Secundaria: ${careers[secondCareerName].name}` : 
                     careers[winningCareer].name,
@@ -1030,6 +1031,14 @@
                         
                         <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin: 20px 0;">
                             <div style="background: #f0f7f0; padding: 15px; border-radius: 10px; text-align: center; border: 1px solid #7CB342;">
+                                <div style="font-size: 1.3rem; font-weight: 700; color: #2E7D7B;">28</div>
+                                <div style="font-size: 0.9rem; color: #555;">Certificados incluidos</div>
+                            </div>
+                            <div style="background: #f0f7f0; padding: 15px; border-radius: 10px; text-align: center; border: 1px solid #7CB342;">
+                                <div style="font-size: 1.3rem; font-weight: 700; color: #2E7D7B;">1</div>
+                                <div style="font-size: 0.9rem; color: #555;">Estancia empresarial</div>
+                            </div>
+                            <div style="background: #f0f7f0; padding: 15px; border-radius: 10px; text-align: center; border: 1px solid #7CB342;">
                                 <div style="font-size: 1.3rem; font-weight: 700; color: #2E7D7B;">7</div>
                                 <div style="font-size: 0.9rem; color: #555;">Lengua extranjera</div>
                             </div>
@@ -1092,12 +1101,4 @@
         });
     </script>
 </body>
-</html>3rem; font-weight: 700; color: #2E7D7B;">28</div>
-                                <div style="font-size: 0.9rem; color: #555;">Certificados incluidos</div>
-                            </div>
-                            <div style="background: #f0f7f0; padding: 15px; border-radius: 10px; text-align: center; border: 1px solid #7CB342;">
-                                <div style="font-size: 1.3rem; font-weight: 700; color: #2E7D7B;">1</div>
-                                <div style="font-size: 0.9rem; color: #555;">Estancia empresarial</div>
-                            </div>
-                            <div style="background: #f0f7f0; padding: 15px; border-radius: 10px; text-align: center; border: 1px solid #7CB342;">
-                                <div style="font-size: 1.
+</html>
