--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
                             </div>
                             <div style="background: #f0f7f0; padding: 15px; border-radius: 10px; text-align: center; border: 1px solid #7CB342;">
                                 <div style="font-size: 1.3rem; font-weight: 700; color: #2E7D7B;">7</div>
-                                <div style="font-size: 0.9rem; color: #555;">Lengua extranjera (incluidos en los 28)</div>
+                                <div style="font-size: 0.9rem; color: #555;">Certificados de Lengua extranjera (Incluidos en los 28)</div>
                             </div>
                             <div style="background: #f0f7f0; padding: 15px; border-radius: 10px; text-align: center; border: 1px solid #7CB342;">
                                 <div style="font-size: 1.3rem; font-weight: 700; color: #2E7D7B;">✓</div>
